--- a/src/app/components/pie-pagina/pie-pagina.component.html
+++ b/src/app/components/pie-pagina/pie-pagina.component.html
@@ -1,1 +1,11 @@
-<p>pie-pagina works!</p>
+<footer id="pie-pagina" class="bg-warning text-white mt-5 p-5">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <p class="lead text-center">
+                    Copyright &copy; Patricio Contreras 
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
