se termino de implementar el componente clientes

--- a/src/app/components/clientes/clientes.component.html
+++ b/src/app/components/clientes/clientes.component.html
@@ -27,6 +27,7 @@
                                 <th>#</th>
                                 <th>Nombre</th>
                                 <th>Saldo</th>
+                                <th></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -34,12 +35,38 @@
                                 <td>{{i+1}}</td>
                                 <td>{{cliente.nombre}} {{cliente.apellido}}</td>
                                 <td>{{cliente.saldo | currency:'CLP':'$'}}</td>
+                                <td>
+                                    <a [routerLink]="['/cliente/editar',cliente.id]"  routerLinkActive="active" class="btn btn-secondary" >
+                                        <i class="fas fa-angle-double-right"></i>Editar
+                                    </a>
+                                </td>
                             </tr>
                         </tbody>
 
                     </table>
                 </div>
             </div>
+            <!--Tarjeta lateral que mostrara el saldo que devben los clientes y el número de clientes que tiene la aplicacion-->
+            <div class="col-md-3">
+                <div class="card text-center bg-danger text-white mb-3">
+                    <div class="card-body">
+                        <h3>Saldo Total</h3>
+                        <h4 class="display-4">
+                            {{getSaldoTotal() | currency:'CLP':'$'}}
+                        </h4>
+                    </div>
+                </div>
+               
+                <div class="card text-center bg-success text-white mb-3">
+                    <div class="card-body">
+                        <h3>Total Clientes</h3>
+                        <h4 class="display-4">
+                          <i class="fas fa-users"></i>{{clientes?.length}}
+                        </h4>
+                    </div>
+                </div>
+            </div>
+            <!--Fin tarjeta Lateral-->
         </div>
     </div>
 </section>
