Iniciando desarrollo de modal agregar cliente

--- a/src/app/components/clientes/clientes.component.html
+++ b/src/app/components/clientes/clientes.component.html
@@ -70,3 +70,23 @@
         </div>
     </div>
 </section>
+
+<!--Agregar cliente modal-->
+<div class="modal fade" id="agregarClienteModal">
+    <div class="modal-dialog modl-lg">
+        <div class="modal-content">
+            <div class="modal-header bg-info text-white">
+                <h5 class="modal-title"> Agregar Cliente</h5>
+                 <button class="close" data-dismiss="modal">
+                    <span>&times;</span>
+                 </button>
+            </div>
+            <form>
+                
+            </form>
+
+        </div>
+
+    </div>
+
+</div>
